tests/machine/x/fs/list_nested_assign.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/list_nested_assign.fs(5,1): error FS0810: Property 'Item' cannot be set
