tests/machine/x/fs/list_nested_assign.fs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T16:27:35Z
open System

let mutable matrix: int list array = [|[1; 2]; [3; 4]|]
matrix.[1].[0] <- 5
printfn "%A" (matrix.[1].[0])
